--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 .background{
     background: linear-gradient(rgb(0,0,0,0.5) rgb(0,0,0,0,5));
-    background-image:url(background.jpg);
+    background-image:url(foto\ baiuca.jpg);
     background-size: cover;
     background-position: center;
     width: 100%;
